@@ -57,9 +57,7 @@ static void mbcsToSbcs(const char *in, char *out, const char *encoding, int enc)
 extern int errno;
 #endif
 
-#ifdef Win32
-# define USE_GZIO
-#endif
+#define USE_GZIO
 
 #ifdef USE_GZIO
 #include <zlib.h>
